[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/tree_editor/tree_editor.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://scenes/tree_editor/ui/tree_editor_view.tscn" id="2_editor_view"]

[node name="TreeEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBox/TopBar"]
layout_mode = 2
text = "< Back"

[node name="Title" type="Label" parent="VBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skill Tree Editor"
horizontal_alignment = 1

[node name="SaveButton" type="Button" parent="VBox/TopBar"]
layout_mode = 2
text = "Save"

[node name="StatusLabel" type="Label" parent="VBox/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(100, 0)

[node name="Content" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="TreePanel" type="PanelContainer" parent="VBox/Content"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="TreeEditorView" parent="VBox/Content/TreePanel" instance=ExtResource("2_editor_view")]
layout_mode = 2

[node name="PropertyPanel" type="PanelContainer" parent="VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PropertyScroll" type="ScrollContainer" parent="VBox/Content/PropertyPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PropertyVBox" type="VBoxContainer" parent="VBox/Content/PropertyPanel/PropertyScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EmptyLabel" type="Label" parent="VBox/Content/PropertyPanel/PropertyScroll/PropertyVBox"]
layout_mode = 2
text = "Click a node to edit its properties.
Double-click empty space to add a node."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HintBar" type="Label" parent="VBox"]
layout_mode = 2
text = "Dbl-click: add node | Del: delete | Shift+click: link/unlink | Drag: move"
horizontal_alignment = 1
